--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
         body {
-            background-color: #151d26;
+            background-color: #0B121B;
             color: #e6f3fa;
             font-family: 'Iosevka Nerd Font', monospace;
             font-size: 17px;
@@ -32,7 +32,7 @@
 
         .search-bar {
             background: none;
-            border: 0px solid #e6f3fa;
+            border: 0px solid #0B121B;
             color: #e6f3fa;
             text-align: center;
             font-family: 'Iosevka Nerd Font', monospace;
