--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="https://boards.4chan.org/g/">/g/</a>
             <a href="https://boards.4chan.org/pol/">/pol/</a>
             <a href="https://boards.4chan.org/b/">/b/</a>
-            <a href="https://redlib.freedit.eu/r/unixporn">r/unix</a>
+            <a href="https://libreddit.diffraction.dev/r/unixporn">r/unix</a>
         </div>
     </div>
 </body>
