--- a/start.html
+++ b/start.html
@@ -321,12 +321,13 @@
         <h2>/threads/</h2>
         <ul id="threads-list">
             <li class="greentext"><a href="https://boards.4chan.org/g/" target="_blank">/g/ - Tech</a></li>
-            <li class="greentext"><a href="https://boards.4chan.org/tech/" target="_blank">/tech/ - Technology</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/lit/" target="_blank">/lit/ - Literature</a></li>
             <li class="greentext"><a href="https://boards.4chan.org/pol/" target="_blank">/pol/ - Politics</a></li>
-            <li class="greentext"><a href="https://8kun.top/pol/" target="_blank">8kun /pol/</a></li>
-            <li class="greentext"><a href="https://zzzchan.xyz/" target="_blank">zzzchan</a></li>
-            <li class="greentext"><a href="https://soyjak.party/" target="_blank">Soyjak.party</a></li>
-            <li class="greentext"><a href="https://lainchan.org/" target="_blank">Lainchan</a></li>
+            <li class="greentext"><a href="https://8kun.top/pol/catalog.html" target="_blank">8kun - /pol/</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/tv/" target="_blank">/tv/ - Television</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/tr/" target="_blank">/trv/ - Travel</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/wg/" target="_blank">/wg/ - Wallpapers/General</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/hr/" target="_blank">/hr/ - High Resolution</a></li>
         </ul>
     </div>
 
@@ -335,7 +336,7 @@
         <h2>/lurks/</h2>
         <ul>
             <li class="greentext"><a href="https://nitter.net/" target="_blank">Nitter</a></li>
-            <li class="greentext"><a href="https://www.reddit.com" target="_blank">Reddit</a></li>
+            <li class="greentext"><a href="https://redlib.privacyredirect.com/" target="_blank">Redlib</a></li>
             <li class="greentext"><a href="https://x.com" target="_blank">X</a></li>
             <li class="greentext"><a href="https://qalerts.app/" target="_blank">QAlerts</a></li>
         </ul>
@@ -345,9 +346,9 @@
         <button class="close-btn" onclick="closePopup()" ontouchstart="closePopup()">×</button>
         <h2>/media/</h2>
         <ul>
-            <li class="greentext"><a href="https://invidious.io/" target="_blank">Invidious</a></li>
+            <li class="greentext"><a href="https://inv.nadeko.net/" target="_blank">Invidious</a></li>
             <li class="greentext"><a href="https://catbox.moe/" target="_blank">Catbox</a></li>
-            <li class="greentext"><a href="https://open.spotify.com" target="_blank">Spotify</a></li>
+            <li class="greentext"><a href="https://youtube.com" target="_blank">Youtube</a></li>
             <li class="greentext"><a href="https://music.youtube.com" target="_blank">YT Music</a></li>
         </ul>
     </div>
@@ -362,7 +363,7 @@
             <li class="greentext"><a href="https://pastebin.com/" target="_blank">Pastebin</a></li>
             <li class="greentext"><a href="https://proton.me/mail" target="_blank">Proton Mail</a></li>
             <li class="greentext"><a href="https://gitlab.com/" target="_blank">GitLab</a></li>
-            <li class="greentext"><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a></li>
+            <li class="greentext"><a href="https://catbox.moe/" target="_blank">Catbox</a></li>
         </ul>
     </div>
 
