--- a/start.html
+++ b/start.html
@@ -326,6 +326,7 @@
             <li class="greentext"><a href="https://8kun.top/pol/catalog.html" target="_blank">8kun - /pol/</a></li>
             <li class="greentext"><a href="https://boards.4chan.org/tv/" target="_blank">/tv/ - Television</a></li>
             <li class="greentext"><a href="https://boards.4chan.org/tr/" target="_blank">/trv/ - Travel</a></li>
+            <li class="greentext"><a href="https://boards.4chan.org/x/" target="_blank">/x/ - Paranormal</a></li>
             <li class="greentext"><a href="https://boards.4chan.org/wg/" target="_blank">/wg/ - Wallpapers/General</a></li>
             <li class="greentext"><a href="https://boards.4chan.org/hr/" target="_blank">/hr/ - High Resolution</a></li>
         </ul>
