Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startpage</title>
     <style>
-        @font-face {
-            font-family: 'Gohu';
-            src: url('assets/fonts/GohuFont14NerdFont-Regular.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        @font-face {
-            font-family: 'GohuMono';
-            src: url('fonts/IosevkaNerdFont-Bold.ttf') format('truetype');
+        
+		@font-face {
+            font-family: 'Iosevka Nerd Font';
+            src: url('assets/fonts/IosevkaNerdFont-Bold.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -29,7 +23,7 @@
             font-family: 'Iosevka Nerd Font', monospace;
             font-size: 11pt;
             background: linear-gradient(rgba(15, 25, 35, 0.85), rgba(15, 25, 35, 0.85)), 
-                        url('https://w.wallhaven.cc/full/q2/wallhaven-q2r82d.png');
+                        url('assets/images/background-waves.webp');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -51,7 +45,7 @@
             padding: 8px 16px;
             cursor: pointer;
             font-weight: bold;
-            font-family: 'Gohu', monospace;
+            font-family: 'Iosevka Nerd Font', monospace;
             font-size: 10pt;
             transition: all 0.2s;
             opacity: 0.7;
